adding timer functionality

--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <div id="content">
-    <div id="debug" style="color: white;">Hello World!</div>
+    <div id="debug"></div>
     <div class="timer">
         <canvas class="analogTimer" width="300" height="300"></canvas>
     </div>
